Inserción de boton agregar y cambio de diseño

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 </head>
 
 <body>
-    <div class="contenedorPrincipal">
-        <p class="texto">hola mundo</p>
+    <div class="borde contenedorPrincipal resplandorBorde">
+        <div class="grid borde">
+            <div class="botonDiv">
+                <p class="texto diseñoTextoBoton">
+                    Agregar<br>
+                    componenetes
+                </p>
+                <button name="botonAgg" class="boton">
+                        Agregar
+                </button>
+            </div>
+        </div>
     </div>
 </body>
 
