--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica</title>
-    <link rel="stylesheet" href="CSS/Principal.CSS"/>
+    <link rel="stylesheet" href="CSS/Principal.CSS" />
 </head>
 
 <body>
@@ -17,9 +17,13 @@
                     componenetes
                 </p>
                 <button name="botonAgg" class="boton">
-                        Agregar
+                    Agregar
                 </button>
             </div>
+            <div id="AgregarComponenetes" class="componenetes">
+
+            </div>
+
         </div>
     </div>
 </body>
