--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
     <div class="borde contenedorPrincipal resplandorBorde">
         <div class="grid borde">
             <div class="botonDiv">
-                <p class="texto diseñoTextoBoton">
+                <label class="texto diseñoTextoBoton">
                     Agregar<br>
                     componenetes
-                </p>
+                </label>
                 <button name="botonAgg" class="boton">
                     Agregar
                 </button>
             </div>
             <div id="AgregarComponenetes" class="componenetes">
-
+                <p class="alinearComponentes">
+                    <label class="texto textoComponentes">Datos</label>
+                    <input class="inputComponentes" name="aggText" title="Agregar" placeholder="Ingresa texto"/>
+                    <input class="inputComponentes" name="aggText" title="Agregar" placeholder="Ingresa texto"/>
+                    <button class="botonComponentes">-</button>
+                </p>
             </div>
 
         </div>
