--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <label class="texto textoComponentes">Datos</label>
                         <input class="inputComponentes" name="aggText" title="Agregar" placeholder="Ingresa texto" />
                         <input class="inputComponentes" name="aggText2" title="Agregar" placeholder="Ingresa texto" />
-                        <button class="botonComponentes">-</button>
-                    </p>
+                        <button onclick="eliminarComponente(this)" class="botonComponentes">-</button>
+                    <script src="JS/aggComponenetes.js"></script>
                 </div>
 
             </div>
